Fixed login flex wrap

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -199,6 +199,7 @@ footer {
 
     .forms-flex {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         align-items: center;
         flex: 1;
